feat: add feature to rename project snapshots
